--- a/update/sass/style.css.sass
+++ b/update/sass/style.css.sass
@@ -73,8 +73,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-bottom: 20px
 
 .element
-  width: 110px
-  height: 110px
+  width: 100px
+  height: 125px
   margin: 5px
   float: left
   overflow: hidden
@@ -112,14 +112,27 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .name
     font-size: .6em
     text-align: center
-    background-size: cover
     width: 100%
-    height: 100%
+    position: absolute
 
     .action
       display: block
       font-size: 11px
       color: #eee
+
+  .preview-image 
+    width: auto
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
+    opacity: 0.2
+
+    img 
+      width: auto
+      height: 100%
+      padding: 0
+      margin: 0
 
   .weight
     font-size: 0.7em
@@ -134,15 +147,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     right: 0.5em
     top: 0.5em
 
-/*Values to change
-
-.variable-sizes .element
-  &.width2
-    width: 230px
-  &.height2
-    height: 230px
-  &.width2.height2
-    font-size: 1.8
 
 .variable-sizes .element.large
   font-size: 2.0em
@@ -179,9 +183,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 100%
   margin-bottom: 10px
 
-
-span.twitter
-
 .element
   .description a
     text-decoration: underline
@@ -196,6 +197,11 @@ span.twitter
 
       .action 
         display: none
+
+    .preview-image
+      display: none
+      width: 0
+      height: 0
 
     .description
       display: block
