--- a/update/stylesheets/style.css
+++ b/update/stylesheets/style.css
@@ -61,8 +61,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-bottom: 20px; }
 
 .element {
-  width: 110px;
-  height: 110px;
+  width: 100px;
+  height: 125px;
   margin: 5px;
   float: left;
   overflow: hidden;
@@ -99,13 +99,24 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   .element .name {
     font-size: 0.6em;
     text-align: center;
-    background-size: cover;
     width: 100%;
-    height: 100%; }
+    position: absolute; }
     .element .name .action {
       display: block;
       font-size: 11px;
       color: #eeeeee; }
+  .element .preview-image {
+    width: auto;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.2; }
+    .element .preview-image img {
+      width: auto;
+      height: 100%;
+      padding: 0;
+      margin: 0; }
   .element .weight {
     font-size: 0.7em;
     left: 0.5em;
@@ -118,14 +129,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     color: rgba(0, 0, 0, 0.5);
     right: 0.5em;
     top: 0.5em; }
-
-/*Values to change */
-.variable-sizes .element.width2 {
-  width: 230px; }
-.variable-sizes .element.height2 {
-  height: 230px; }
-.variable-sizes .element.width2.height2 {
-  font-size: 1.8; }
 
 .variable-sizes .element.large {
   font-size: 2em;
@@ -170,6 +173,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-top: 10px; }
   .element.large .name .action {
     display: none; }
+.element.large .preview-image {
+  display: none;
+  width: 0;
+  height: 0; }
 .element.large .description {
   display: block; }
   .element.large .description .clickable .element:hover {
