--- a/update/sass/_global.sass
+++ b/update/sass/_global.sass
@@ -1,5 +1,3 @@
-@import config
-
 *
   margin: 0
   padding: 0
@@ -11,7 +9,7 @@ a.external
   padding: 0 20px 0 0
 
 body
-  background: #000
+  background: black
   font-family: Century Gothic, sans-serif
   font-size: 34px
   overflow-x: hidden
@@ -39,16 +37,16 @@ body
   padding: 40px 0 0 50px
   &.section
     h1
-      color: $green
+      color: #ccff00
       font-size: 60px
     h2
-      color: $purple
+      color: #9900ff
       font-size: 60px
     h3
-      color: $pink
+      color: #ff00cc
       font-size: 60px
     h4
-      color: #fff
+      color: white
       font-size: 30px
       margin: 5px 0
     h5
@@ -66,19 +64,23 @@ body
   h3
     color: #ccff00
     font-size: 20px
-  ul
+  #filters
     font-size: 14px
     padding: 0
     margin: 0
     display: block
-    list-style: circle
+    width: 500px
+    margin: 5px auto
     li
-      color: #fff
+      color: white
       font-size: 14px
       padding: 0
-      margin: 0
+      margin: 0 5px
       display: block
-      float: none
+      float: left
+      a
+        padding: 5px
+        border-radius: 5px
 
 #education ul, #resume ul, #contact ul
   font-size: 14px
@@ -86,54 +88,25 @@ body
   margin: 0
   display: block
   list-style: circle
-  li
-    color: #000
-    font-size: 14px
-    padding: 0
-    margin: 0
-    display: block
-    float: none
+
+#education ul li, #resume ul li, #contact ul li
+  color: black
+  font-size: 14px
+  padding: 0
+  margin: 0
+  display: block
+  float: none
 
 .black
-  color: #fff
+  color: white
   background: black url(../images/green_vert.jpg) repeat-x bottom left
   margin-top: 50px
   padding-top: 50px
 
 .white
-  color: #000
+  color: black
   background: #98ff05 url(../images/black_vert2.jpg) repeat-x bottom left
   padding-top: 50px
-
-.section ul
-  list-style: none
-  margin: 20px 0px 0px 550px
-
-.black ul li
-  float: left
-  padding: 5px
-  margin: 5px
-  color: #98ff05
-  font-size: 28px
-  a
-    display: block
-    color: #fff
-    &:hover
-      text-decoration: none
-      color: #444
-
-.white ul li
-  float: left
-  padding: 5px
-  margin: 5px
-  color: #aaa
-  font-size: 28px
-  a
-    display: block
-    color: #222
-    &:hover
-      text-decoration: none
-      color: #bbb
 
 #navigation
   z-index: 100
@@ -146,10 +119,10 @@ body
     z-index: 100
     a
       z-index: 100
-      color: #fff
+      color: white
       font-size: 20px
       &:hover
-        color: #333
+        color: #333333
 
 /*Social Networking Icon Styles
 
@@ -183,7 +156,7 @@ ul
 /*Fixed Position Navigation Bar and Footer
 
 a
-  color: #fff
+  color: white
   text-decoration: none
   &:hover
     text-decoration: underline
@@ -196,11 +169,11 @@ a
   font-weight: bold
   z-index: 1000
   a
-    color: #fff
-    text-shadow: 1px 1px 1px #000
+    color: white
+    text-shadow: 1px 1px 1px black
     padding-right: 20px
     &:hover
-      color: #ddd
+      color: #dddddd
       text-decoration: none
 
 .social_links
@@ -211,23 +184,23 @@ a
   font-size: 13px
   font-weight: bold
   a
-    color: #fff
-    text-shadow: 1px 1px 1px #000
+    color: white
+    text-shadow: 1px 1px 1px black
     padding-right: 20px
     &:hover
-      color: #ddd
+      color: #dddddd
       text-decoration: none
 
 ul#social li
   float: left
 
 .hide
-  display: none!important
+  display: none !important
 
 #modal_curtain
   width: 100%
   height: 100%
-  background: rgba(255,255,255, 0.6)
+  background: rgba(255, 255, 255, 0.6)
   z-index: 999
   position: fixed
   top: 0
@@ -237,10 +210,6 @@ ul#social li
 .element
   cursor: pointer
 
-//------------------------
-// File Modal
-//------------------------
-
 #modal
   position: fixed
   top: 50%
@@ -249,62 +218,54 @@ ul#social li
   margin-top: -250px
   width: 500px
   height: 500px
-  background: #fff
+  background: white
   z-index: 1000
   display: block
-
   #modal_toolbar
     height: 25px
     width: 100%
-    background: rgba(255,255,255, 0.8)
-
+    background: rgba(255, 255, 255, 0.8)
     h2
       font-size: 18px
       position: absolute
       text-align: center
       top: 0
       z-index: 2000
-
     #modal_close
       width: 25px
       height: 25px
-      background: url('../images/icon_close.png') no-repeat
+      background: url("../images/icon_close.png") no-repeat
       position: absolute
       top: 5px
       right: 5px
       z-index: 2000
       cursor: pointer
-
   #modal_buttons
     height: 23px
     position: absolute
     top: 200px
     z-index: 2000
     width: 100%
-
     #modal_buttons_previous
       cursor: pointer
       width: 50px
       height: 50px
-      background: url('../images/icon_arrow_left.png') no-repeat
+      background: url("../images/icon_arrow_left.png") no-repeat
       float: left
-
     #modal_buttons_next
       cursor: pointer
       width: 50px
       height: 50px
-      background:  url('../images/icon_arrow_right.png') no-repeat
+      background: url("../images/icon_arrow_right.png") no-repeat
       float: right
-
   #modal_slides
     overflow: hidden
     position: relative
     width: 500px
     height: 500px
     display: block
-    background: #000
+    background: black
     z-index: 1999
-
     ul
       position: relative
       left: 0
@@ -314,7 +275,6 @@ ul#social li
       margin: 0
       padding: 0
       width: 5000px
-
       li
         position: relative
         font-size: 20px
@@ -322,32 +282,26 @@ ul#social li
         width: 500px
         height: 500px
         overflow: hidden
-
         img
           width: 100%
-
         .modal_slide_description
           position: absolute
           bottom: 0
           width: 100%
           height: 90px
-          background: rgba(255,255,255, 0.5)
-
+          background: rgba(255, 255, 255, 0.5)
           p
             font-size: 14px
 
-
 .element
   &.web
-    background: $purple
+    background: #9900ff
   &.app
-    background: $pink
+    background: #ff00cc
   &.research
-    background: $green
+    background: #ccff00
 
 /*The isotope Container
 
 #container
   width: 100%
-
-
